security/mycluster-0/echo-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-cilium-gateway-echo-gateway
  annotations:
    policies.kyverno.io/title: Mutate echo gateway
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      We need to mutate the echo gateway service in order to configure the AWS LB.
spec:
  rules:
    - name: mutate-svc-annotations
      match:
        any:
          - resources:
              kinds:
                - Service
              namespaces:
                - echo
              name: cilium-gateway-echo-gateway
          - resources:
              kinds:
                - Service
              namespaces:
                - echo
              name: cilium-gateway-tls-echo-gateway
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              external-dns.alpha.kubernetes.io/hostname: echo.${domain_name}
              service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
              service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
