security/mycluster-0/platform-private-gw-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-cilium-platform-private-gateway
  annotations:
    policies.kyverno.io/title: Mutate private shared gateway
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      We need to mutate the private shared gateway service in order to configure the AWS LB.
spec:
  rules:
    - name: mutate-svc-annotations
      match:
        any:
          - resources:
              kinds:
                - Service
              namespaces:
                - infrastructure
              name: cilium-gateway-platform-private
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              external-dns.alpha.kubernetes.io/hostname: gitops-${cluster_name}.priv.${domain_name},grafana-${cluster_name}.priv.${domain_name}
              service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
              service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
          spec:
            loadBalancerClass: service.k8s.aws/nlb
