security/mycluster-0/platform-public-gw-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-cilium-platform-public-gateway
  annotations:
    policies.kyverno.io/title: Mutate Vector Cloudwatch Gateway
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      We need to mutate the public shared gateway service in order to configure the AWS LB.
spec:
  rules:
    - name: mutate-svc-annotations
      match:
        any:
          - resources:
              kinds:
                - Service
              namespaces:
                - infrastructure
              name: cilium-gateway-platform-public
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              external-dns.alpha.kubernetes.io/hostname: vector-cloudwatch-${cluster_name}.${domain_name}
              service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
              service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
          spec:
            loadBalancerClass: service.k8s.aws/nlb
