security/mycluster-0/shared-gw-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-cilium-gateway-shared-gateway
  annotations:
    policies.kyverno.io/title: Mutate shared gateway
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      We need to mutate the shared gateway service in order to configure the AWS LB.
spec:
  rules:
    - name: mutate-svc-annotations
      match:
        any:
          - resources:
              kinds:
                - Service
              namespaces:
                - infrastructure
              name: cilium-gateway-tls-shared-gateway
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              external-dns.alpha.kubernetes.io/hostname: tls-echo-1.${domain_name},tls-echo-2.${domain_name},split-echo.${domain_name}
              service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
              service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
